--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.juho</groupId>
-	<artifactId>testi</artifactId>
+	<groupId>com.team5</groupId>
+	<artifactId>projekti</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>testi</name>
-	<description>Demo project for Spring Boot</description>
+	<name>projekti</name>
+	<description>Ohjelmistoprojekti 1</description>
 
 	<properties>
 		<java.version>1.8</java.version>
